--- a/index.html
+++ b/index.html
@@ -9,9 +9,29 @@
             canvas {
                 position: absolute;
             }
+            a.snow {
+                position: absolute;
+                bottom: 16px;
+                right: 16px;
+                font-size: 16px;
+                color: black;
+                text-decoration: none;
+                z-index: 9999;
+            }
+            a.tree {
+                position: absolute;
+                bottom: 48px;
+                right: 16px;
+                font-size: 16px;
+                color: black;
+                text-decoration: none;
+                z-index: 9999;
+            }
         </style>
     </head>
     <body>
+        <a class="snow" target="_blank" href="http://thecodeplayer.com/walkthrough/html5-canvas-snow-effect">snow by thecodeplayer.com</a>
+        <a class="tree" target="_blank" href="http://thheuer.com">tree by thheuer.com</a>
 <script>
 var $$ = function(selector) { return document.querySelectorAll(selector) },
     $ = function(selector) { return document.querySelector(selector) },
